--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,6 @@ table {
     width: 100%;
     border-collapse: collapse;
     table-layout: fixed;
-    min-width: 600px;
 }
 
 th, td {
@@ -125,4 +124,64 @@ tfoot tr td {
 
 .round-total {
     width: 45px;
+}
+
+@media screen and (max-width: 768px) {
+    .scoreboard {
+        overflow-x: auto;
+    }
+
+    table {
+        font-size: 0.7rem;
+    }
+
+    th, td {
+        padding: 0.15rem;
+        font-size: 0.7rem;
+    }
+
+    .score-input {
+        width: 28px;
+        padding: 0.1rem;
+        font-size: 0.7rem;
+    }
+
+    .round-name {
+        width: 50px;
+    }
+
+    .round-total {
+        width: 35px;
+    }
+
+    .controls {
+        flex-direction: column;
+        gap: 0.25rem;
+    }
+
+    .player-input, .round-input {
+        width: 100%;
+        justify-content: space-between;
+    }
+
+    input {
+        flex: 1;
+        margin-right: 0.25rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
+        margin: 0.25rem;
+        padding: 0 0.25rem;
+    }
+
+    th, td {
+        padding: 0.1rem;
+        font-size: 0.65rem;
+    }
+
+    .score-input {
+        width: 24px;
+    }
 }
